--- a/introduction/css/css-grid.css
+++ b/introduction/css/css-grid.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  background-color: dodgerblue;
+  grid-template-columns: 1fr 1fr 2fr;
+  background-color: lightblue;
   padding: 5px;
   gap: 5px;
 }
